// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly 1`] = `
<Text
  collapsable={false}
  nativeID="animatedComponent"
  style={
    Object {
      "color": "black",
      "fontSize": 30,
      "fontWeight": "100",
      "textAlign": "center",
    }
  }
/>
`;

exports[`Text renders correctly with size prop 1`] = `
<Text
  collapsable={false}
  nativeID="animatedComponent"
  size={100}
  style={
    Object {
      "color": "black",
      "fontSize": 100,
      "fontWeight": "100",
      "textAlign": "center",
    }
  }
/>
`;
